added actors details
added details for the actors after selecting a movie

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AAD10">
-        <activity android:name=".activity.DetailsActivity"></activity>
-        <activity android:name=".activity.ActivitySearchMovie"></activity>
+        <activity android:name=".activity.ActorDetails"></activity>
+        <activity android:name=".activity.DetailsActivity2"></activity>
+        <activity android:name=".activity.DetailsActivity" />
+        <activity android:name=".activity.ActivitySearchMovie" />
         <activity
             android:name=".activity.MwainActivity"
             android:label="Mwain Activity" />
